# zisvalidator

./: Cargo.toml  README.md  main.yml
.github/workflows/: rust.yml
zisvalidator/: Cargo.toml  README.md
zisvalidator/src/: error.rs  impls.rs  lib.rs
zisvalidator_derive/: Cargo.toml  README.md
zisvalidator_derive/src/: ast.rs  attr.rs  check.rs  error.rs  lib.rs  symbol.rs  validate.rs
zisvalidator_tests/: Cargo.toml
zisvalidator_tests/tests/: test_custom.rs  test_range.rs  test_seq_range.rs
