[package]
name = "zisvalidator_derive"
version = "0.1.5"
authors = ["zz <517669936@qq.com>"]
edition = "2018"
description = "Derive macro for zisvalidator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zzhengzhuo/zisvalidator.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0",features = ["extra-traits","full","printing"]}
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
zisvalidator = {path = "../zisvalidator"}